# edgepi-rpc-protobuf

./: .gitignore  README.md  adc.proto  dac.proto  din.proto  dout.proto  led.proto  package.json  pwm.proto  relay.proto  rpc.proto  setup.cfg  version
.github/workflows/: create-github-release.yml  create-release-tag.yml  npm-publish-dryrun.yml  npm-publish-staging.yml  npm-publish.yml  pypi-publish-staging.yml  pypi-publish.yml  test-workflow.yml  tests.yml  update-versions.yml
javascript/: package.json
javascript_rpc/: README.md  package-lock.json  package.json
javascript_rpc/tests/: install.test.js  test_install.test.js
python/: setup.cfg
python-generated/: led_pb2.py  rpc_pb2.py  tc_pb2.py
python/edgepi_rpc_protobuf.egg-info/: PKG-INFO
python/py-generated-code/: led_pb2.py  pwm_pb2.py  tc_pb2.py
python_rpc/: requirements-build.txt  requirements-dev.txt  setup.cfg
python_rpc/edgepi_rpc_protobuf.egg-info/: SOURCES.txt
python_rpc/protobufs/: adc_pb2.py  dout_pb2.py  relay_pb2.py
python_rpc/rpc_generated_protobufs/: adc_pb2.py  dac_pb2.py  din_pb2.py  dout_pb2.py  led_pb2.py  pwm_pb2.py  relay_pb2.py  tc_pb2.py
python_rpc/tests/: test_install.py
src-python/edgepi_rpc_protobuf.egg-info/: SOURCES.txt
src-python/edgepirpc/protos/: adc_pb2.py  dac_pb2.py  din_pb2.py  dout_pb2.py  led_pb2.py  pwm_pb2.py  relay_pb2.py  tc_pb2.py
