[metadata]
name = edgepi-rpc-protos
version = 1.0.2
author = Isaac James
author_email = ijames@osensa.com
description = Protobuf generated code for EdgePi RPC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EdgePi-Cloud/edgepi-rpc-protobuf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
package_dir={"": "src-python"},
python_requires = >=3.7
include_package_data = True